fixed heading on mobile

--- a/style.css
+++ b/style.css
@@ -251,6 +251,10 @@ footer {
     .form-container {
         width: 90%;
     }
+    
+    .container {
+        width: 90%;
+    }
 }
 
 @media(max-width: 960px) {
